Add image thumbnail for links for social media sharing.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<!--<link href='http://fonts.googleapis.com/css?family=Share+Tech|Audiowide' rel='stylesheet' type='text/css'>-->
         <title>BLASTR</title>
     <div id="nametag">
-        <h1>
+        <h1> 
+			<link rel="image_src" href="./img/pass2/Untitled2.png" />
             <img src="./img/titleLogo.png" style='width: 60%; margin-top: 50px; margin-bottom: 30px' alt='BLASTR'></h1>
         <!--<ul>
             <a href="#"><li>Home</li></a>
