--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
 <head>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-49247997-1', 'blastrgame.com');
+	  ga('send', 'pageview');
+
+	</script>
+
     <link rel="stylesheet" href="./fontkit/stylesheet.css"/>
     <link rel="stylesheet" href="./style.css"/>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,400italic,300,300italic|Roboto:400,300,500' rel='stylesheet' type='text/css'>
