Updated with better screenshot

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="content">
     
       <div id="latest">
-          <img style="width: 60%; margin-bottom:50px" src="./img/pass3/orange-skyline.png"> 
+          <img style="width: 60%; margin-bottom:50px" src="./img/pass3/prepaxpromo.png"> 
    
           <!--<h4>a sci-fi action adventure</h4>		-->          
           <h5>coming soon</h5>
