PRE PAX WEBSITE UPDATE WITH TRAILER AND SHIT

--- a/download.html
+++ b/download.html
@@ -4,12 +4,12 @@
 <head>  
     <title>Download - BLASTR</title>
 	<script type="text/javascript">
-		window.location.href = "./download/BLASTR-demo-milestone3.7z"
+		window.location.href = "./download/BLASTR-demo-PAXAus.zip"
 	</script>
 </head>
 <body>
 	Downloading latest build... 
 	<br>
-	If you are not redirected automatically, follow the <a href='./download/BLASTR-demo-milestone3.7z'>link to example</a>
+	If you are not redirected automatically, follow the <a href='./download/BLASTR-demo-PAXAus.zip'>Download Link</a>
 </body>          
 </html>
