Start day3 website update with new build and stuff..

--- a/press.html
+++ b/press.html
@@ -25,28 +25,62 @@
     <title>BLASTR</title>
         
     <a href='./index.html'><img src="./img/pass4/gamelogo-full.png" style='width: 20%; margin-top: 40px; margin-bottom: 30px' alt='BLASTR'></a>
+			<br>
+	<a href='./img/pass5/map.png'><img src="./img/pass5/paxaus.png" style='width: 20%; margin-top: 0px; margin-bottom: 10px' alt='BLASTR'></a>
+
 </head>
 <body>
     <div id="content">
 		<div>
         <h4 style='background-color: white'>
-          Press Pack - PDF View/Download 
+          Our Story - PDF View/Download 
         </h4>
 			<div>
 			<a href="./press/PressPack-BLASTR-Nikhil.pdf">Download PDF</a>
 			</div>
-		<iframe src="http://docs.google.com/viewer?url=http%3A%2F%2Fblastrgame.com%2Fpress%2FPressPack-BLASTR-Nikhil.pdf&embedded=true" width="600" height="780" style="border: none;"></iframe>		
+		<iframe src="./press/PressPack-BLASTR-Nikhil.pdf" width="600" height="780" style="border: none;"></iframe>		
 		</div>
-        <a href="./index.html"id="download2">Home</a>
-        <a href="./game.html" id="download2">Learn more</a>
-		<a href="./download.html" target='_blank' id="download2">Download demo (70 MB)</a>		
-		
-		<div style='background-color: white;'>
-			<a href='http://twitter.com/BLASTRgame' target='_blank'><img style="height: 30px; margin-top: 30px" alt="Tweet us!" src="./img/pass5/twt.png"></a>
-		</div>
-		<div style='background-color: white;'>
-	      <a href='http://nklsrh.com' target='_blank'><img style="height: 50px; margin: 30px" alt="NikhilSuresh.com" src="./img/pass4/studiologo-full.png"></a>
-		</div>
+        <div style='background-color: #000; padding-left: 20%; padding-right: 20%'>
+
+			  <br>
+			<h4 style='background-color: white'>
+			  Work in Progress 
+			</h4>
+			
+			  <p>
+			  We're 2 students from Sydney and Melbourne, building this game in our spare time. <br>
+			  It's time to start showing this to the world, starting at PAX Australia in November. <br><br>
+			  </p> 
+			  
+			<!-- Begin MailChimp Signup Form -->
+
+			<div id="mc_embed_signup">
+			<form action="//nklsrh.us9.list-manage.com/subscribe/post?u=c6ea2a9fe54fd6417d23b303d&amp;id=45516588c2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				<div id="mc_embed_signup_scroll">
+				<label for="mce-EMAIL">Keep track of progress with our mailing list</label>
+				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+				<div style="position: absolute; left: -5000px;"><input type="text" name="b_c6ea2a9fe54fd6417d23b303d_45516588c2" tabindex="-1" value=""></div>
+				<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+				</div>
+			</form>
+        </div>
+
+		<!--End mc_embed_signup-->
+        </div>
+		<br><br>
+		<div>
+			<a href="./index.html"id="download2">Home</a>
+			<a href="./game.html" id="download2">Learn more</a>
+			<a href="./download.html" target='_blank' id="download2">Download PAX demo</a>	
+        </div>	
+			
+			<div style='background-color: white;'>
+				<a href='http://twitter.com/BLASTRgame' target='_blank'><img style="height: 30px; margin-top: 30px" alt="Tweet us!" src="./img/pass5/twt.png"></a>
+			</div>
+			<div style='background-color: white;'>
+			  <a href='http://nklsrh.com' target='_blank'><img style="height: 50px; margin: 30px" alt="NikhilSuresh.com" src="./img/pass4/studiologo-full.png"></a>
+			</div>
 	</div>
 
 </body>
