Updated demo with Controls screen and some changes in multiplayer screen ordering. Also added post-match screen.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<strong style='color: #FF5000'>Platforms</strong> PC + ?
 			  </h5>    
 			  <h5>
-				<strong style='color: #FF5000'>Genre</strong> Third-Person Action Puzzle
+				<strong style='color: #FF5000'>Genre</strong> Third-Person Action
 			  </h5>    
 			  <h5>
 				<strong style='color: #FF5000'>Development Period</strong> since July 2014
